# dbt-project-anac

./: .gitignore  README.md  main.py  main.tf  pyproject.toml
anac_project/: README.md  dbt_project.yml
anac_project/models/marts/: fct_cargo_logistics.sql  fct_flight_delays.sql  fct_flight_movement.sql  schema.yaml
anac_project/models/marts/reporting/: fct_flights_groupby_airports.sql  schema.yaml
anac_project/models/staging/: sources.yml  stg_dim_aircrafts.sql  stg_dim_airports_brazil.sql  stg_dim_service_type.sql  stg_movements.sql
anac_project/seeds/: dim_aircraft.csv  dim_airports_brazil_icao.csv  dim_service_type.csv
utils/: anac_extractor.py  bq_loader.py
