[project]
name = "dbt-project-anac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.42.0",
    "google-cloud-storage>=3.12.0",
]

[dependency-groups]
dev = [
    "lxml>=6.1.1",
    "pandas>=3.0.3",
]
